# haskell-course

./: .gitignore
Homework/Homework01/: Homework01.hs
Homework/Homework02/: Homework02.hs
Homework/Homework03/: Homework03.hs
Homework/Homework04/: Homework04.hs
Homework/Homework05/: Homework05.hs
Homework/Homework06/: Homework06.hs
Homework/Homework08/: Homework08.hs
Homework/Homework09/: 1-Maze.hs  2-Forest.hs
Homework/Homework10/: Homework10.hs
Homework/Homework11/: homework.hs
Homework/Homework12/: hello
Homework/Homework13/Forest/: Level1.hs  Main.hs
Homework/Homework13/Forest/User/Actions/: Move.hs
Homework/Homework13/List_Dir/: Main  Main.hs
Homework/Homework14/ForestGame/: ForestGame.cabal  LICENSE
Homework/Homework14/ForestGame/app/: Main.hs
Homework/Homework14/ForestGame/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Homework/Homework14/ForestGame/src/Forest/: Level1.hs  Level2.hs
Homework/Homework14/ForestGame/src/User/Actions/: Battle.hs  Move.hs
Homework/Homework15/app/: FCatch.hs  FILE  FTry.hs  Homework15A.hs  Old_Homework15A
Homework/Homework15/src/: Homework15B.hs
lessons/: 08-Creating-non-parameterized-types.ipynb  09-Creating-parameterized-and-recursive-types.ipynb  10-Creating-Type-Classes-and-Instances.ipynb  11-Basic-IO.ipynb  12-Installing-Haskell-and-first-program.ipynb  13-Modules.ipynb  14-Cabal_and_language_extensions.ipynb
